probe only IP
